<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Impostazione_Segue">Segue</string>
    <string name="Inserisci_login">Login operatore</string>
    <string name="Inserisci_pwd">Password operatore</string>
    <string name="Login_operatore">Login</string>
    <string name="Logout_operatore">Logout</string>
    <string name="Ristampa_comanda">Ristampa comanda</string>
    <string name="accetta_messaggi">Accetta</string>
    <string name="accetta_varianti">Accetta</string>
    <string name="action_settings">Settings</string>
    <string name="add_elem">Aggiungi</string>
    <string name="agg_db_al_login">Sincronizza DB al login</string>
    <string name="aggiungi_articolo">Seleziona</string>
    <string name="aggiungi_varianti">Varianti</string>
    <string name="annulla_articoli">Annulla articoli</string>
    <string name="annulla_comanda">Annulla</string>
    <string name="annulla_generico">Annulla</string>
    <string name="annulla_messaggi">Annulla</string>
    <string name="annulla_varianti">Annulla</string>
    <string name="app_name">VROrdina</string>
    <string name="carica_articoli">caricamento articoli comande precedenti</string>
    <string name="carica_tavoli">Caricamento tavoli</string>
    <string name="cfg_programma">Configurazione programma</string>
    <string name="close_activity">Chiudi</string>
    <string name="close_app">Esci</string>
    <string name="default_ipserver">"inserisci qui l'ip del server"</string>
    <string name="hello_world">Hello world!</string>
    <string name="insert_order">Ordinazioni</string>
    <string name="invia_comanda">Invia comanda</string>
    <string name="label_configura_ipserver">Indirizzo IP del server</string>
    <string name="label_configura_portaserver">Porta TCP</string>
    <string name="label_coperti">Coperti</string>
    <string name="lbl_TotaleConto">Totale conto:</string>
    <string name="lbl_idAndroid">Id Android</string>
    <string name="menu_settings">Settings</string>
    <string name="messaggio_libero">Messaggio libero</string>
    <string name="minus">-</string>
    <string name="modifica_qta">modifica quantità</string>
    <string name="plus">+</string>
    <string name="qta_iniziale">01</string>
    <string name="registra_terminale">Registrazione terminale</string>
    <string name="remove_elem">Elimina</string>
    <string name="richiesta_conto">Chiedi conto</string>
    <string name="salva_generico">Salva</string>
    <string name="sblocca_comanda">sblocca comanda</string>
    <string name="settings">configurazione</string>
    <string name="sincro_db">Sincronizza</string>
    <string name="title_activity_articoli">Inserimento articoli</string>
    <string name="title_activity_configurazione">configurazione programma</string>
    <string name="title_activity_main">VROrdina</string>
    <string name="title_activity_messaggi">MessaggiActivity</string>
    <string name="title_activity_ordine">Inserimento comanda</string>
    <string name="title_activity_varianti">Inserimento varianti</string>
    <string name="titolo_varianti">seleziona le varianti</string>
    <string name="val_iniziale">0</string>
    <string name="variante_libera">Variante libera</string>
    <string name="vedi_comanda">Vedi comanda</string>
    <string name="vedi_ordini_precedenti">Ordini precedenti</string>
    <string name="vedi_reparti">Vedi reparti</string>
</resources>
