<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="30.0sp" android:textColor="@*android:color/white" android:id="@id/bQtaPlus" android:background="@drawable/button_green_selector" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/plus" android:layout_toLeftOf="@id/modqta" android:layout_alignParentLeft="true" />
    <TextView android:textSize="30.0sp" android:gravity="center" android:id="@id/modqta" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/qta_iniziale" android:layout_centerHorizontal="true" />
    <Button android:textSize="30.0sp" android:textColor="@*android:color/white" android:id="@id/bQtaMinus" android:background="@drawable/button_red_selector" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/minus" android:layout_toRightOf="@id/modqta" android:layout_alignParentRight="true" />
    <ListView android:id="@id/elencoarticoli" android:background="@drawable/generic_transparent_bk_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/menuarticoli" android:layout_below="@id/bQtaPlus" />
    <RelativeLayout android:orientation="vertical" android:id="@id/menuarticoli" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Button android:textSize="20.0sp" android:textColor="@*android:color/black" android:id="@id/bAggVarianti" android:background="@drawable/button_yellow_selector" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/aggiungi_varianti" android:layout_toLeftOf="@id/s44" android:layout_below="@id/modqta" android:layout_alignParentLeft="true" />
        <TextView android:id="@id/s44" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/modqta" android:layout_centerHorizontal="true" />
        <Button android:textSize="20.0sp" android:textColor="@*android:color/black" android:id="@id/bAggSegue" android:background="@drawable/button_yellow_selector" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/Impostazione_Segue" android:layout_toRightOf="@id/s44" android:layout_below="@id/modqta" android:layout_alignParentRight="true" />
        <Button android:textSize="20.0sp" android:textColor="@*android:color/black" android:id="@id/bVediReparti" android:background="@drawable/button_yellow_selector" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/vedi_reparti" android:layout_toLeftOf="@id/s33" android:layout_below="@id/bAggVarianti" android:layout_alignParentLeft="true" />
        <TextView android:id="@id/s33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/bAggVarianti" android:layout_centerHorizontal="true" />
        <Button android:textSize="20.0sp" android:textColor="@*android:color/white" android:id="@id/bVediComanda" android:background="@drawable/button_green_selector" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/vedi_comanda" android:layout_toRightOf="@id/s33" android:layout_below="@id/bAggVarianti" android:layout_alignParentRight="true" />
        <Button android:textSize="20.0sp" android:textColor="@*android:color/white" android:id="@id/bAnnullaArticoli" android:background="@drawable/button_red_selector" android:layout_width="fill_parent" android:layout_height="28.0dip" android:text="@string/annulla_articoli" android:layout_below="@id/bVediComanda" android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>